# Inventory-MCP

./: .gitignore  Agent.py  README.md  fast_api.py  pyproject.toml  server.py
config/: token_cach.json
src/: server.py  transport.py
src/resources/: composite_items.py  contacts.py  items.py  salesorders.py  taxes.py
src/tools/: salesorders.py
src/utils/: api.py  setting.py
tests/: test_api.py  test_composite_items.py  test_contatcts.py  test_get_taxes.py  test_items.py  test_salesorders.py  test_settings.py
